Update portfolio: transparent nav on mobile, video playback fix, deploy workflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 /* Prevent downloading/copying portfolio media */
 img, video, picture, svg {
   -webkit-user-drag: none;
+  user-drag: none;
   -webkit-user-select: none;
   user-select: none;
 }
